--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,18 @@
             <version>7.1.15</version>
             <type>pom</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.5</version>
+<!--            <scope>test</scope>-->
+        </dependency>
     </dependencies>
 </project>
